cmd/shared/libgogit.h

extern void GitPullOptionsNew(long long* handleOut);
extern char* GitPullOptionsSetRemoteName(long long handle, char* val);
extern char* GitPullOptionsSetRemoteURL(long long handle, char* val);
extern char* GitPullOptionsSetReferenceName(long long handle, char* val);
extern char* GitPullOptionsSetSingleBranch(long long handle, int val);
extern char* GitPullOptionsSetDepth(long long handle, int val);
extern char* GitPullOptionsSetAuth(long long handle, long long authHandle);
extern char* GitPullOptionsSetForce(long long handle, int val);
extern char* GitPullOptionsSetInsecureSkipTLS(long long handle, int val);
extern void GitPullOptionsFree(long long handle);
extern void GitPushOptionsNew(long long* handleOut);
extern char* GitPushOptionsSetRemoteName(long long handle, char* val);
extern char* GitPushOptionsSetRemoteURL(long long handle, char* val);
extern char* GitPushOptionsSetAuth(long long handle, long long authHandle);
extern char* GitPushOptionsSetPrune(long long handle, int val);
extern char* GitPushOptionsSetForce(long long handle, int val);
extern char* GitPushOptionsSetInsecureSkipTLS(long long handle, int val);
extern char* GitPushOptionsSetFollowTags(long long handle, int val);
extern char* GitPushOptionsSetAtomic(long long handle, int val);
extern char* GitPushOptionsSetQuiet(long long handle, int val);
extern void GitPushOptionsFree(long long handle);
extern void GitResetOptionsNew(long long* handleOut);
extern char* GitResetOptionsSetCommit(long long handle, char* val);
extern char* GitResetOptionsSetMode(long long handle, int val);
extern void GitResetOptionsFree(long long handle);
extern void GitRestoreOptionsNew(long long* handleOut);
extern char* GitRestoreOptionsSetStaged(long long handle, int val);
extern char* GitRestoreOptionsSetWorktree(long long handle, int val);
extern char* GitRestoreOptionsAddFile(long long handle, char* path);
extern void GitRestoreOptionsFree(long long handle);
extern void GitLogOptionsFree(long long handle);
extern void GitPlainOpenOptionsNew(long long* handleOut);
extern char* GitPlainOpenOptionsSetDetectDotGit(long long handle, int val);
extern void GitPlainOpenOptionsFree(long long handle);
extern void GitMergeOptionsNew(long long* handleOut);
extern char* GitMergeOptionsSetStrategy(long long handle, int val);
extern void GitMergeOptionsFree(long long handle);
extern void GitSubmoduleUpdateOptionsNew(long long* handleOut);
extern char* GitSubmoduleUpdateOptionsSetInit(long long handle, int val);
extern char* GitSubmoduleUpdateOptionsSetNoFetch(long long handle, int val);
extern char* GitSubmoduleUpdateOptionsSetAuth(long long handle, long long authHandle);
extern char* GitSubmoduleUpdateOptionsSetDepth(long long handle, int val);
extern void GitSubmoduleUpdateOptionsFree(long long handle);