dotnet/GoGitDotNet/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitLogOptionsFree(long handle);

    // MergeOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitMergeOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitMergeOptionsSetStrategy(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitMergeOptionsFree(long handle);

    // PlainOpenOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitPlainOpenOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPlainOpenOptionsSetDetectDotGit(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitPlainOpenOptionsFree(long handle);

    // PruneOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitPruneOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPruneOptionsSetOnlyObjectsOlderThan(long handle, long val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitPruneOptionsFree(long handle);

    // PullOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitPullOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetRemoteName(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetRemoteURL(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetReferenceName(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetSingleBranch(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetDepth(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetAuth(long handle, long authHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetRecurseSubmodules(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetForce(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetInsecureSkipTLS(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPullOptionsSetProxy(
        long handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string url,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string username,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string password);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitPullOptionsFree(long handle);

    // PushOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitPushOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetRemoteName(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetRemoteURL(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetRefSpecs(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetAuth(long handle, long authHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetPrune(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetForce(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetInsecureSkipTLS(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetRequireRemoteRefs(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetFollowTags(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetOptions(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetAtomic(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetQuiet(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetProxy(
        long handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string url,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string username,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string password);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPushOptionsSetForceWithLease(
        long handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string refName,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string hash);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitPushOptionsFree(long handle);

    // ResetOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitResetOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitResetOptionsSetCommit(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitResetOptionsSetMode(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitResetOptionsSetFiles(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitResetOptionsSetSparseDirs(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitResetOptionsSetSkipSparseDirValidation(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitResetOptionsFree(long handle);

    // RestoreOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitRestoreOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRestoreOptionsSetStaged(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRestoreOptionsSetWorktree(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRestoreOptionsSetFiles(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRestoreOptionsAddFile(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitRestoreOptionsFree(long handle);

    // StatusOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitStatusOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitStatusOptionsSetStrategy(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitStatusOptionsFree(long handle);

    // SubmoduleUpdateOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitSubmoduleUpdateOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleUpdateOptionsSetInit(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleUpdateOptionsSetNoFetch(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleUpdateOptionsSetRecurseSubmodules(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleUpdateOptionsSetAuth(long handle, long authHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleUpdateOptionsSetDepth(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitSubmoduleUpdateOptionsFree(long handle);

    // DiffTreeOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitDiffTreeOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitDiffTreeOptionsSetDetectRenames(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitDiffTreeOptionsSetRenameScore(long handle, uint val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitDiffTreeOptionsSetRenameLimit(long handle, uint val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitDiffTreeOptionsSetOnlyExactRenames(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitDiffTreeOptionsFree(long handle);

    // LogLimitOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitLogLimitOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitLogLimitOptionsSetSince(long handle, long val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitLogLimitOptionsSetUntil(long handle, long val);
